# Zombie-Attack

./: .replit  DEPLOY_STEP_BY_STEP.md  LOCAL_SETUP.md  README_RENDER.md  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md
attached_assets/: Pasted-2026-05-09T16-08-13-13285058Z-2026-05-09T16-08-13-13285_1778343346523.txt  Pasted-Crie-uma-vers-o-nova-moderna-e-simplificada-de-um-websi_1777388470668.txt  Pasted-Module-1-The-instruction-screen-should-take-the-whole-p_1777424793946.txt  Pasted-PS-C-Users-maria-Desktop-skill-project-skill-project-Zo_1778143660591.txt  cards_1778344441589.json
backend/: .env  .env.example  bot.py  create_test_session.py  create_test_session_sync.py  database.py  database_logic.md  db_queries.py  main.py  migrate.py  migrate_has_skipped.py  minimal_bot.py  models.py  neon_schema.sql  requirements.txt  schemas.py  websocket_manager.py  zombieware.db
backend/routes/: auth.py  game.py  player.py  quicktest.py  session.py
backend/scripts/: bot.py  check_columns.py  drop_db.py  migrate_ready.py  minimal_bot.py  test_scoreboard.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: 404.html
frontend/src/: App.jsx  index.css  translations.js
frontend/src/components/: AudioToggle.jsx  BackButton.jsx  EduPopup.jsx  HelpButton.jsx  LazyImage.jsx  Sidebar.jsx  TopNav.jsx
frontend/src/contexts/: LanguageContext.jsx
frontend/src/hooks/: useAudio.js  useGameWebSocket.js
frontend/src/pages/: AboutUs.jsx  Auth.jsx  Dashboard.jsx  EndGame.jsx  GameScreen.jsx  History.jsx  (+8 more)
(+1 files in other folders)
